TestSuite/errors/err0365.pas
type t1 = class end;

begin
  var a := new t1;
  a.НеСуществующийМетод;
end.